cleanup some usage around Visitable::visit now using Visitable::stream