@@ -2,7 +2,6 @@ package com.bakdata.conquery.models.query;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -10,14 +9,21 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.ws.rs.core.UriBuilder;
 
 import c10n.C10N;
-import com.bakdata.conquery.apiv1.query.QueryDescription;
+import com.bakdata.conquery.apiv1.ExecutionStatus;
+import com.bakdata.conquery.apiv1.FullExecutionStatus;
 import com.bakdata.conquery.apiv1.query.IQuery;
+import com.bakdata.conquery.apiv1.query.QueryDescription;
+import com.bakdata.conquery.apiv1.query.SecondaryIdQuery;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQExternal;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQReusedQuery;
 import com.bakdata.conquery.internationalization.CQElementC10n;
 import com.bakdata.conquery.io.cps.CPSType;
 import com.bakdata.conquery.io.storage.MetaStorage;
@@ -26,23 +32,16 @@ import com.bakdata.conquery.models.auth.permissions.Ability;
 import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.datasets.Dataset;
 import com.bakdata.conquery.models.execution.ExecutionState;
-import com.bakdata.conquery.apiv1.ExecutionStatus;
-import com.bakdata.conquery.apiv1.FullExecutionStatus;
 import com.bakdata.conquery.models.execution.ManagedExecution;
 import com.bakdata.conquery.models.externalservice.ResultType;
 import com.bakdata.conquery.models.i18n.I18n;
 import com.bakdata.conquery.models.identifiable.ids.NamespacedIdentifiable;
 import com.bakdata.conquery.models.identifiable.ids.specific.DatasetId;
 import com.bakdata.conquery.models.identifiable.ids.specific.ManagedExecutionId;
-import com.bakdata.conquery.apiv1.query.SecondaryIdQuery;
-import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
-import com.bakdata.conquery.apiv1.query.concept.specific.CQExternal;
-import com.bakdata.conquery.apiv1.query.concept.specific.CQReusedQuery;
 import com.bakdata.conquery.models.query.queryplan.QueryPlan;
 import com.bakdata.conquery.models.query.resultinfo.ResultInfo;
 import com.bakdata.conquery.models.query.results.EntityResult;
 import com.bakdata.conquery.models.query.results.ShardResult;
-import com.bakdata.conquery.models.query.visitor.QueryVisitor;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.util.QueryUtils.NamespacedIdentifiableCollector;
@@ -239,22 +238,17 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 	 * All further labels are dropped.
 	 */
 	@Override
-	protected void makeDefaultLabel(final StringBuilder sb, PrintSettings cfg) {
-		final Map<Class<? extends Visitable>, List<Visitable>> sortedContents = new HashMap<>();
+	protected String makeDefaultLabel(PrintSettings cfg) {
+		final StringBuilder sb = new StringBuilder();
+
+		final Map<Class<? extends Visitable>, List<Visitable>> sortedContents =
+				Visitable.stream(query)
+						 .collect(Collectors.groupingBy(Visitable::getClass));
 
 		int sbStartSize = sb.length();
 
-		QueryVisitor visitor = new QueryVisitor() {
-
-			@Override
-			public void accept(Visitable t) {
-				sortedContents.computeIfAbsent(t.getClass(), (clazz) -> new ArrayList<>()).add(t);
-			}
-		};
-		query.visit(visitor);
-
 		// Check for CQExternal
-		List<Visitable> externals = sortedContents.computeIfAbsent(CQExternal.class, (clazz) -> List.of());
+		List<Visitable> externals = sortedContents.getOrDefault(CQExternal.class, Collections.emptyList());
 		if (!externals.isEmpty()) {
 			if (sb.length() > 0) {
 				sb.append(" ");
@@ -263,7 +257,7 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 		}
 
 		// Check for CQReused
-		if (!sortedContents.computeIfAbsent(CQReusedQuery.class, (clazz) -> List.of()).isEmpty()) {
+		if (sortedContents.containsKey(CQReusedQuery.class)) {
 			if (sb.length() > 0) {
 				sb.append(" ");
 			}
@@ -272,18 +266,17 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 
 		// Check for CQConcept
 		final AtomicInteger length = new AtomicInteger();
-		String usedConcepts = sortedContents.computeIfAbsent(CQConcept.class, (clazz) -> List.of()).stream()
-											.map((CQConcept.class::cast))
-											.map(c -> makeLabelWithRootAndChild(c, cfg))
-											.distinct()
-											.filter((s) -> !Strings.isNullOrEmpty(s))
-											.takeWhile(elem -> length.addAndGet(elem.length()) < MAX_CONCEPT_LABEL_CONCAT_LENGTH)
-											.collect(Collectors.joining(" "));
+		sortedContents.getOrDefault(CQConcept.class, Collections.emptyList())
+					  .stream()
+					  .map(CQConcept.class::cast)
 
-		if (sb.length() > 0 && !usedConcepts.isEmpty()) {
-			sb.append(" ");
-		}
-		sb.append(usedConcepts);
+					  .map(c -> makeLabelWithRootAndChild(c, cfg))
+					  .filter(Predicate.not(Strings::isNullOrEmpty))
+					  .distinct()
+
+					  .takeWhile(elem -> length.addAndGet(elem.length()) < MAX_CONCEPT_LABEL_CONCAT_LENGTH)
+					  .forEach(label -> sb.append(label).append(" "));
+
 
 		// If not all Concept could be included in the name, point that out
 		if (length.get() > MAX_CONCEPT_LABEL_CONCAT_LENGTH) {
@@ -294,6 +287,8 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 		if (sbStartSize == sb.length()) {
 			sb.append(getId().getExecution());
 		}
+
+		return sb.toString();
 	}
 
 	private static String makeLabelWithRootAndChild(CQConcept cqConcept, PrintSettings cfg) {
